worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: dockercoins/worker:v0.1

          # Because if limits = requests then QoS is set to "Guaranteed"
          resources:
            requests:
              cpu: '50m' # Request 50 millicores of cpu
              memory: '25Mi' # Request 25 MiB of memory
            limits:
              cpu: '100m' # Limit to 100 millicores of cpu
              memory: '50Mi' # Limit to 50 MiB of memory

          # per-container security context
          # lock down privileges inside the container
          securityContext:
            allowPrivilegeEscalation: false # prevent sudo, etc.
            privileged: false # prevent acting like host root

          # hardcode the listening port if Dockerfile isn't set with EXPOSE
          # ports:
          #   - containerPort: 80
          #     protocol: TCP
