hasher.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hasher
spec:
  type: ClusterIP
  selector:
    app: hasher
  ports:
    - protocol: TCP
      # port of the service
      port: 80
      # port of the pod
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hasher
spec:
  selector:
    matchLabels:
      app: hasher
  template:
    metadata:
      labels:
        app: hasher
    spec:
      containers:
        - name: hasher
          image: dockercoins/hasher:v0.1
          # resources:
          #   limits:
          #     memory: '128Mi'
          #     cpu: '500m'
          ports:
            - containerPort: 80
