redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - protocol: TCP
      # port of the service
      port: 6379
      # port of the pod
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:8.2.1

          # Because if limits = requests then QoS is set to "Guaranteed"
          resources:
            requests:
              cpu: '20m' # Request 20 MiB of memory
              memory: '40Mi' # Request 40 MiB of memory
            limits:
              cpu: '60m' # Limit to 60 millicores of cpu
              memory: '80Mi' # Limit to 80 MiB of memory

          # per-container security context
          # lock down privileges inside the container
          securityContext:
            allowPrivilegeEscalation: false # prevent sudo, etc.
            privileged: false # prevent acting like host root

          # hardcode the listening port if Dockerfile isn't set with EXPOSE
          ports:
            - containerPort: 6379
              protocol: TCP
