rng.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rng
spec:
  type: ClusterIP
  selector:
    app: rng
  ports:
    - protocol: TCP
      # port of the service
      port: 80
      # port of the pod
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rng
spec:
  selector:
    matchLabels:
      app: rng
  template:
    metadata:
      labels:
        app: rng
    spec:
      containers:
        - name: rng
          image: dockercoins/rng:v0.1

          # Because if limits = requests then QoS is set to "Guaranteed"
          resources:
            requests:
              cpu: '25m' # Request 25 MiB of memory
              memory: '30Mi' # Request 30 MiB of memory
            limits:
              cpu: '50m' # Limit to 50 millicores of cpu
              memory: '60Mi' # Limit to 60 MiB of memory

          # hardcode the listening port if Dockerfile isn't set with EXPOSE
          ports:
            - containerPort: 80
              protocol: TCP
