webui.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webui
spec:
  type: ClusterIP
  selector:
    app: webui
  ports:
    - protocol: TCP
      # port of the service
      port: 8082
      # port of the pod
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui
spec:
  selector:
    matchLabels:
      app: webui
  template:
    metadata:
      labels:
        app: webui
    spec:
      containers:
        - name: webui
          image: dockercoins/webui:v0.1

          # Because if limits = requests then QoS is set to "Guaranteed"
          resources:
            requests:
              cpu: '10m' # Request 10 MiB of memory
              memory: '40Mi' # Request 40 MiB of memory
            limits:
              cpu: '25m' # Limit to 25 millicores of cpu
              memory: '80Mi' # Limit to 80 MiB of memory

          # hardcode the listening port if Dockerfile isn't set with EXPOSE
          ports:
            - containerPort: 80
              protocol: TCP
